// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. scaled medium full article 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "lineHeight": 30,
                    "marginBottom": 20,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 34,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 60,
                    }
                  }
                >
                  Some content
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. scaled large full article 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 21,
                    "lineHeight": 31,
                    "marginBottom": 20,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 34,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 60,
                    }
                  }
                >
                  Some content
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. scaled xlarge full article 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 23,
                    "lineHeight": 33,
                    "marginBottom": 20,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": 34,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": 60,
                    }
                  }
                >
                  Some content
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;
